--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 
-		<title>Solid State by HTML5 UP</title>
+		<title>Christopher Martinez Portfolio</title>
 
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -23,11 +23,10 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">	
-							<div class="logo">	
-								<a target="_blank" href="http://www.linkedin.com/in/mchristopher91"><p style="display:inline; margin:0;font-size: 30px;font-weight: bold;text-decoration: underline;">Linked</p></a> 		
+							<div class="logo">			
 								<a target="_blank" href="http://www.linkedin.com/in/mchristopher91"><span  class="fa-brands fa-linkedin fa-2xl icon_round"></span></a>		
 						</div>
-							<h2>Email Developer Portfolio • <a style="font-size: 18px;color:rgb(255, 217, 0);"href="https://mchristopher91.github.io/assets/Chris_Martinez_RES.docx">Resume</a></h2>
+							<h2>Email Developer Portfolio  <a target="_blank" style="font-size: 18px;color:rgb(255, 217, 0);"href="https://mchristopher91.github.io/assets/Chris_Martinez_RES.docx">Resume <i class="fa-solid fa-up-right-from-square"></i></a></h2>
 							<p> HTML • CSS/CSS MEDIA QUERIES • PHOTOSHOP/Illustrator • VISUAL STUDIO CODE •  </p>
 						</div>
 					</section>
