--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
 											<a target="_blank" href="https://us10.campaign-archive.com/?e=__test_email__&u=88efed298bb356f9c5e1d006c&id=c68842d07c" class="special">Visit</a>
 										</article>
 										<article>
-											<a target="_blank" href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Coming Soon</h3>
-											<p>Work in Progress</p>
-											<a target="_blank" href="#" class="special">visit</a>
+											<a target="_blank" href="https://us18.campaign-archive.com/?e=%5bUNIQID%5d&u=38c0268c63a0eb06c8ee17fc3&id=2f9eaf8909" class="image"><img src="https://i.postimg.cc/d3nb4yV8/127-0-0-1-5500-LIVE-PORTAFOLIO-Flower-Project-First-page-Confirm-Email-FLOWERPROJECT-html-i-Pad-Pro.png" alt="" /></a>
+											<h3 class="major">Flower Shop</h3>
+											<p> This email presented a challenge to my ability to apply all of the techniques I had previously learned to this project.</p>
+											<a target="_blank" href="https://us18.campaign-archive.com/?e=%5bUNIQID%5d&u=38c0268c63a0eb06c8ee17fc3&id=2f9eaf8909" class="special">visit</a>
 										</article>
 									</section>
 									
