--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
 									<p>The Following are examples of hand coded email projects </p>
 									<section class="features">
 										<article>
+											<a target="_blank" href="https://us18.campaign-archive.com/?e=[UNIQID]&u=38c0268c63a0eb06c8ee17fc3&id=8e29d795ce" class="image"><img src="https://i.postimg.cc/d3nb4yV8/127-0-0-1-5500-LIVE-PORTAFOLIO-Flower-Project-First-page-Confirm-Email-FLOWERPROJECT-html-i-Pad-Pro.png" alt="" /></a>
+											<h3 class="major">Flower Shop</h3>
+											<p> This email presented a challenge to my ability to apply all of the techniques I had previously learned to this project.</p>
+											<a target="_blank" href="https://us18.campaign-archive.com/?e=[UNIQID]&u=38c0268c63a0eb06c8ee17fc3&id=8e29d795ce" class="special">Example 1</a>
+											<a target="_blank" href="https://us18.campaign-archive.com/?e=[UNIQID]&u=38c0268c63a0eb06c8ee17fc3&id=30fdcb0754" class="special">Example 2</a>
+										</article>
+										<article>
 											<a target="_blank" href="https://us10.campaign-archive.com/?e=__test_email__&u=88efed298bb356f9c5e1d006c&id=15571ef4eb" class="image"><img src="https://i.postimg.cc/gk1p7jG6/holiday-2.png" alt="" /></a>
 											<h3 class="major">Holiday Email</h3>
 											<p>On this project, i was exposed to images having a border attribute that needed to be disabled so to avoid white lines between image and text aswell as learning about media queries.</p>
@@ -83,12 +90,7 @@
 											<p>This email helped me understand more on responsive web desing.</p>
 											<a target="_blank" href="https://us10.campaign-archive.com/?e=__test_email__&u=88efed298bb356f9c5e1d006c&id=c68842d07c" class="special">Visit</a>
 										</article>
-										<article>
-											<a target="_blank" href="https://us18.campaign-archive.com/?e=[UNIQID]&u=38c0268c63a0eb06c8ee17fc3&id=8e29d795ce" class="image"><img src="https://i.postimg.cc/d3nb4yV8/127-0-0-1-5500-LIVE-PORTAFOLIO-Flower-Project-First-page-Confirm-Email-FLOWERPROJECT-html-i-Pad-Pro.png" alt="" /></a>
-											<h3 class="major">Flower Shop</h3>
-											<p> This email presented a challenge to my ability to apply all of the techniques I had previously learned to this project.</p>
-											<a target="_blank" href="https://us18.campaign-archive.com/?e=[UNIQID]&u=38c0268c63a0eb06c8ee17fc3&id=8e29d795ce" class="special">visit</a>
-										</article>
+										
 									</section>
 									
 									<!--<ul class="actions">
