--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<div class="logo">			
 								<a target="_blank" href="http://www.linkedin.com/in/mchristopher91"><span  class="fa-brands fa-linkedin fa-2xl icon_round"></span></a>		
 						</div>
-							<h2>Email Developer Portfolio<a target="_blank" style="font-size: 18px;color:rgb(255, 217, 0);" href="https://mchristopher91.github.io/assets/Chris_Martinez_RES.docx">Resume <i class="fa-solid fa-up-right-from-square"></i></a></h2>
+							<h2>Email Developer Portfolio <a target="_blank" style="font-size: 18px;color:rgb(255, 217, 0);" href="https://mchristopher91.github.io/assets/Chris_Martinez_RES.docx">&nbsp Resume <i class="fa-solid fa-up-right-from-square"></i></a></h2>
 							<p> HTML • CSS/CSS MEDIA QUERIES • PHOTOSHOP/Illustrator • VISUAL STUDIO CODE •  </p>
 						</div>
 					</section>
