--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
 									<p>The Following are examples of hand coded email projects </p>
 									<section class="features">
 										<article>
+											<a target="_blank" href="https://us18.campaign-archive.com/?e=[UNIQID]&u=38c0268c63a0eb06c8ee17fc3&id=9b1f9719b0" class="image"><img src="https://i.postimg.cc/445T4rhc/electronic-store.png" alt="" /></a>
+											<h3 class="major">Electronic Store Collection</h3>
+											<p> 3 emails to challenge my ability and apply all of the techniques I had previously learned to this project.</p>
+											<a target="_blank" href="https://us18.campaign-archive.com/?e=[UNIQID]&u=38c0268c63a0eb06c8ee17fc3&id=2bc19d370e" class="special">Confirm Email</a>
+											<a target="_blank" href="https://us18.campaign-archive.com/?e=[UNIQID]&u=38c0268c63a0eb06c8ee17fc3&id=9b1f9719b0" class="special">Welcome Email</a>
+											<a target="_blank" href="https://us18.campaign-archive.com/?e=[UNIQID]&u=38c0268c63a0eb06c8ee17fc3&id=038f17f51b" class="special">Content Email</a>
+										</article>
+										<article>
 											<a target="_blank" href="https://us18.campaign-archive.com/?e=[UNIQID]&u=38c0268c63a0eb06c8ee17fc3&id=8e29d795ce" class="image"><img src="https://i.postimg.cc/d3nb4yV8/127-0-0-1-5500-LIVE-PORTAFOLIO-Flower-Project-First-page-Confirm-Email-FLOWERPROJECT-html-i-Pad-Pro.png" alt="" /></a>
 											<h3 class="major">Flower Shop Collection</h3>
 											<p> 6 emails to challenge my ability and apply all of the techniques I had previously learned to this project.</p>
