--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<div class="logo">			
 								<a target="_blank" href="http://www.linkedin.com/in/mchristopher91"><span  class="fa-brands fa-linkedin fa-2xl icon_round"></span></a>		
 						</div>
-							<h2>Email Developer Portfolio <a target="_blank" style="font-size: 18px;color:rgb(255, 217, 0);" href="https://mchristopher91.github.io/assets/CHRIS MARTINEZ-Resume.docx">&nbsp Resume <i class="fa-solid fa-up-right-from-square"></i></a></h2>
+							<h2>Email Developer Portfolio <a target="_blank" style="font-size: 18px;color:rgb(255, 217, 0);" href="https://mchristopher91.github.io/assets/Chris_Martinez_RES.docx">&nbsp Resume <i class="fa-solid fa-up-right-from-square"></i></a></h2>
 							<p> HTML • CSS/CSS MEDIA QUERIES • PHOTOSHOP/Illustrator • VISUAL STUDIO CODE •  </p>
 						</div>
 					</section>
@@ -65,6 +65,14 @@
 									<h2 class="major">Email Projects</h2>
 									<p>The Following are examples of hand coded email projects </p>
 									<section class="features">
+										<article>
+											<a target="_blank" href="https://us18.campaign-archive.com/?e=[UNIQID]&u=38c0268c63a0eb06c8ee17fc3&id=ea017850be" class="image"><img src="https://i.postimg.cc/YSnXmMsb/preview.png" alt="" /></a>
+											<h3 class="major">Electronic Store Collection</h3>
+											<p> Google Email recreation</p>
+											<a target="_blank" href="https://us18.campaign-archive.com/?e=[UNIQID]&u=38c0268c63a0eb06c8ee17fc3&id=ea017850be" class="special">Google Email</a>
+											
+											
+										</article>
 										<article>
 											<a target="_blank" href="https://us18.campaign-archive.com/?e=[UNIQID]&u=38c0268c63a0eb06c8ee17fc3&id=9b1f9719b0" class="image"><img src="https://i.postimg.cc/445T4rhc/electronic-store.png" alt="" /></a>
 											<h3 class="major">Electronic Store Collection</h3>
